# patterns

./: .gitignore  CMakeLists.txt  data.txt  listWidget.h  main.cpp
lab_1/with/lab1/: CMakeLists.txt  listMediator.cpp  main.cpp
lab_1/without/lab1/: CMakeLists.txt
lab_2/: ou.tsv
lab_2/with/: CMakeLists.txt  createMatch.h  createTeam.h  entry.h  main.cpp  match.cpp  match.h  team.cpp
lab_2/without/: CMakeLists.txt  player.h  team.h  types.h  utils.h
lab_3/with/: CMakeLists.txt  adapter.cpp  adapter.h  main.cpp
lab_3/without/: CMakeLists.txt  analogClock.cpp  analogClock.h  main.cpp  realDigitalClock.h
lab_4/: in.tsv  ou.tsv
lab_4/with/: CMakeLists.txt  adapter.cpp  adapter.h  controller.cpp  controller.h  createPlayer.h  creator.h  digitalClock.h  listMediator.cpp  listMediator.h  main.cpp  pages.h  player.cpp  realDigitalClock.cpp  realDigitalClock.h  utils.h  view.cpp  view.h  view1.cpp  view1.h  view2.cpp  view2.h  view3.cpp  view3.h
with/lab1/: command.h  component.h  listMediator.h  mediator.h  textField.h
without/lab1/: dialog.cpp  dialog.h  main.cpp
